deploy/o11y/elastic/k8s/03_kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: o11y
spec:
  ingressClassName: traefik
  rules:
    - host: kibana.tasklog-demo.orb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
