deploy/o11y/elastic/k8s/05_apm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apm
  namespace: o11y
spec:
  rules:
    - host: apm.tasklog-demo.orb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apm-apm-http
                port:
                  number: 8200
